--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
     <form id='api_selector'>
       <div class='input'>
         <select placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl">
-          <option>http://app-000-dev.avalonlabs.io:9000/accounts-0.4.230/api-docs</option>
-          <option>http://app-000-dev.avalonlabs.io:9001/content-0.4.230/api-docs</option>
-          <option>http://app-000-dev.avalonlabs.io:9002/profiles-0.4.230/api-docs</option>
-          <option>http://app-000-dev.avalonlabs.io:9003/bubbles-0.4.230/api-docs</option>
-          <option>http://app-000-dev.avalonlabs.io:9004/emotions-0.4.230/api-docs</option>
-          <option>http://app-000-dev.avalonlabs.io:9005/various-0.4.230/api-docs</option>
-          <option>http://app-000-dev.avalonlabs.io:9006/photos-0.4.230/api-docs</option>
-          <option>http://app-000-dev.avalonlabs.io:9007/discovery-0.4.230/api-docs</option>
-       	  <option>http://app-000-dev.avalonlabs.io:9008/communities-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9000/accounts-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9001/content-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9002/profiles-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9003/bubbles-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9004/emotions-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9005/various-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9006/photos-0.4.230/api-docs</option>
+          <option>http://app-000-staging.avalonlabs.io:9007/discovery-0.4.230/api-docs</option>
+       	  <option>http://app-000-staging.avalonlabs.io:9008/communities-0.4.230/api-docs</option>
 	</select>
       </div>
       <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text"/></div>
